--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,17 @@ jobs:
     - run: flutter test
     - run: flutter build apk
     - run: flutter build ios --release --no-codesign
+    # Upload generated apk to the artifacts.
+    - uses: actions/upload-artifact@v1
+      with:
+        name: release-apk
+        path: build/app/outputs/apk/release/app-release.apk
+    # Make a zip from ipa IOS
+    - name: Make Artefact
+      run: |
+       zip artefact.zip App.ipa App.app.dSYM.zip
+    # upload the IOS zip
+    - uses: actions/upload-artifact@v1
+      with:
+       name: artefact.zip
+       path: build/app/outputs/ios/release/artefact.zip
