--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,17 +20,14 @@ jobs:
     - run: flutter build apk
     - run: flutter build ios --release --no-codesign
     # Upload generated apk to the artifacts.
-    - uses: actions/upload-artifact@v1
+    - name: Upload Android Artifacts
+      uses: actions/upload-artifact@v1
       with:
         name: release-apk
         path: build/app/outputs/apk/release/app-release.apk
-    # Make a zip from ipa IOS
-    - name: Make Artefact
-      # /Users/runner/work/iosTest/iosTest/build/ios/iphoneos/Runner.app.
-      run: |
-       zip artefact.zip Runner.app
-    # upload the IOS zip
-    - uses: actions/upload-artifact@v1
+    # Upload IOS artifacts
+    - name: Upload IOS Artifacts
+      uses: actions/upload-artifact@v1
       with:
-       name: artefact.zip
-       path: build/app/outputs/ios/release/artefact.zip
+       name: Artefacts
+       path: build/app/outputs/ios/release/Artifacts
